tests/parsing/smtlib/mcil/errors/259_check-system_bad_query_or_unclosed.mcil
(check-system sys :queries ((q (r)) x))